[gd_scene load_steps=3 format=3 uid="uid://xrrnifldxknh"]

[ext_resource type="Script" path="res://menu/menu_script/setting_menu.gd" id="1_e0c2i"]
[ext_resource type="PackedScene" uid="uid://bq8aglcnlte1r" path="res://menu/list_spot_menu.tscn" id="2_rbh8w"]

[node name="create_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.996599, 1.00186)
mouse_filter = 2
script = ExtResource("1_e0c2i")

[node name="window" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 71.0
offset_right = 389.0
offset_bottom = -39.0
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="parametre_list" type="ItemList" parent="window"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 66.0
offset_right = -9.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="window"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 2.0
offset_bottom = 51.0
grow_horizontal = 2
alignment = 1

[node name="param_button" type="Button" parent="window/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "paramètres de la scène"

[node name="arbo_button" type="Button" parent="window/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Arborescence"

[node name="retract_button_open" type="Button" parent="window"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -35.5
offset_right = 9.0
offset_bottom = 38.5
grow_horizontal = 0
grow_vertical = 2
text = "<"

[node name="ColorRect" type="ColorRect" parent="window"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.133
anchor_right = 1.0
offset_left = 10.0
offset_top = 137.554
offset_right = -9.0
offset_bottom = 485.0

[node name="VBoxContainer" type="VBoxContainer" parent="window/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 44.0
offset_right = -24.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="window/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="window/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="window/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="window/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="window/ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="retract_button_close" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -37.0
offset_right = 18.0
offset_bottom = 37.0
grow_vertical = 2
text = ">"

[node name="list_spot" parent="." instance=ExtResource("2_rbh8w")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.339
offset_left = 753.563
offset_top = 68.8719
offset_right = 733.035
offset_bottom = -160.128
grow_horizontal = 1

[connection signal="pressed" from="window/HBoxContainer/param_button" to="." method="_on_param_button_pressed"]
[connection signal="pressed" from="window/HBoxContainer/arbo_button" to="." method="_on_arbo_button_pressed"]
[connection signal="pressed" from="window/retract_button_open" to="." method="_on_retract_button_open_pressed"]
[connection signal="pressed" from="retract_button_close" to="." method="_on_retract_button_close_pressed"]
